--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,5 +2,6 @@
   <%= simple_form_for @list do |f| %>
     <%= f.input :name %>
     <%= f.submit "Add list", class: "btn btn-primary" %>
-  <% end %>
+  <% end %><br>
+  <%= link_to 'Back to lists', lists_path(@lists) %>
 </div>
