--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,14 @@
 <h1><%= @list.name %></h1>
+<ul>
+  <% @list.bookmarks.each do |bookmark| %>
+    <li>
+      <strong><%= bookmark.movie.title %></strong>,
+      <%= bookmark.comment %>
+      <%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+    </li>
+  <% end %>
+</ul>
 
+<%= link_to 'Add bookmark', new_list_bookmark_path(@list) %>
+<br>
+<%= link_to 'Back to list', lists_path(@lists) %>
